--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .header,
-footer {
+.footer {
   background-color: var(--container-color);
   display: flex;
   justify-content: center;
@@ -59,12 +59,14 @@ footer {
   align-items: center;
 }
 
+.main__quiz {
+  width: 700px; /* Я всё вижу. Не забывай про БЭМ*/
+  height: 600px;
+}
+
 .quiz {
   background-color: var(--container-color-reversed);
   color: var(--text-color-reversed);
-
-  width: 700px; /* Я всё вижу. Не забывай про БЭМ*/
-  height: 600px;
 
   border-radius: 10px;
 
@@ -181,6 +183,7 @@ footer {
 
   background-color: var(--button-secondary-color);
   border: 1px solid var(--button-secondary-color-hovered);
+  color: rgb(92, 92, 92);
 }
 
 .quiz__button_secondary:hover:not(:disabled) {
@@ -200,11 +203,15 @@ footer {
 }
 
 .correct-answer {
-  background-color: greenyellow;
+  background-color: #00ff00;
+  color: black;
+  border: 2px solid var(--button-main-color-submit-border);
 }
 
 .wrong-answer {
-  background-color: orangered;
+  background-color: #ff0000;
+  color: black;
+  border: 2px solid rgba(255, 136, 0, 0.658);
 }
 
 .button-next {
@@ -224,4 +231,28 @@ footer {
 
 .button-next:active {
   background-color: #a8eb5b;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.quiz__loader {
+  margin-bottom: 70px;
 }
